--- a/day.html
+++ b/day.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        <h2>Heading 1</h2>
         <p> Hello this is git lessons.</p>
     
     </body>
