--- a/day.html
+++ b/day.html
@@ -9,6 +9,7 @@
     <body>
         <h2>Heading 1</h2>
         <p> Hello this is git lessons.</p>
+        <p> second paragraph </p>
     
     </body>
 </html>
